Subjects don't actually delete, but instead disappear if destroy action is called (esentially deleting them but someone please make them actually delete)

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -82,7 +82,7 @@
             </tr>
             
               <% Subject.all.each do |i| %>
-                <% if i.creatorid == session[:tutor_id] %>
+                <% if ((i.creatorid == session[:tutor_id]) && (i.deletedSubject==false)) %>
                  
                   <table style="width:180%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
