--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -82,14 +82,15 @@
             </tr>
             
               <% Subject.all.each do |i| %>
-                <% if i.creatorid == session[:tutor_id] %>
+                <% if ((i.creatorid == session[:tutor_id]) && (i.deletedSubject==false)) %>
                  
                   <table style="width:180%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
-                      <th style="width:43.1%", "position:absolute"> <%= i.name %></th>
+                      <th style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th style="width:22%", "position:absolute"> <%= i.date %></th> 
                       <th style="width:15%", "position:absolute"> <%= i.rate %></th>
-                      <th><%= link_to " Delete", subjectdelete_path(check: i.id), method: :delete,
+                      
+                      <th style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
@@ -127,6 +128,8 @@
             <tr>
                       <th style="width:13.1%", "position:absolute">Student name</th>
                       <th style="width:12%", "position:absolute">Email</th> 
+                      <th style="width:12%", "position:absolute">Subject</th> 
+                      <th style="width:12%", "position:absolute">Day</th> 
               </tr>
             
               <% TutorRequest.all.each do |i| %>
@@ -136,6 +139,8 @@
                     <tr>
                       <th style="width:13.1%", "position:absolute"> <%= i.student %></th>
                       <th style="width:12%", "position:absolute"> <%= i.email %></th> 
+                      <th style="width:12%", "position:absolute"> <%= i.whichSubject %></th> 
+                      <th style="width:12%", "position:absolute"> <%= i.time %></th> 
                       
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
