--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -90,7 +90,7 @@
         <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
         
         <%= f.label "Admin Key (admin use only)" %>
-        <%= f.text_field :adminKey, class: 'form-control' %>
+        <%= f.password_field :adminKey, class: 'form-control' %>
   
         <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
