--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -53,7 +53,7 @@
     </div>
   </nav>
 		<div class="large_content">
-		<div class="container">
+		<div class="container" style="margin-top: -30px">
 			<h1>About Us</h1>
 			<p id="homep">This website serves to match a tutor with a tutee. We do not take responsibility for any issues
 			that occur as a result of using this website.
