--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -52,7 +52,7 @@
       <% end %>
       
     </ul>
-     <a class="navbar-brand" href="/home">CV Enterprises</a>
+     <!--<a class="navbar-brand" href="/home">CV Enterprises</a>-->
   </div>
 </nav>
 	<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
@@ -109,13 +109,13 @@
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
 	<center>
-	 	<div class="small_content">
-			Need Help? 		
-	 	 	<p>
-	 	 		Our website will match you with a tutor in any subject - just click the button, enter your name, grade, and the subject in which you need help.
+	 	<!--<div class="small_content">-->
+			<!--Need Help? 		-->
+	 	<!-- 	<p>-->
+	 	<!-- 		Our website will match you with a tutor in any subject - just click the button, enter your name, grade, and the subject in which you need help.-->
 	 	 			
-	 	 	</p>
- 	 	</div>
+	 	<!-- 	</p>-->
+ 	 <!--	</div>-->
  	</center>
 </body>
 </html>
