--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -55,7 +55,7 @@
         
       <% end %>
 </nav>
-	<div class="large_content">
+	<div class="large_content" style="background-position: 30% 37%">
 		<div class="container">
 			<h1 id="homeh1">Find a tutor</h1>
 			<p id="homep"></p>		
