--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -51,7 +51,7 @@
   </div>
 </nav>
     
-<div class="large_content" id="large_content">
+<div class="large_content" id="large_content" style="background-position: 30% 37%">
     <h1> Sign Up</h1>
 </div>
 
