--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -78,7 +78,7 @@
  <!--     <a class="navbar-brand" href="/login">Login</a>-->
  <!--     </div>-->
  <!--   </nav>-->
-	<div class="large_content">
+	<div class="large_content" style= "height: 94.8vh">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
 			<p id="homep">Welcome to the Tutor Matching home page! Click the button below to sign up or login. </p>		
