--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -162,6 +162,8 @@
             <!--</tr>-->
           </table>
           </div>
+            <br><br>
+           <%= link_to "Delete Account", @person, method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
           </h1>
       </section>
     </aside>
