--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -22,7 +22,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
-      <% if session[:tutor_id] %>
+      <% if Person.find_by(id: session[:tutor_id])%>
         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
