--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -30,7 +30,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="/findatutor">Find a Tutor</a>
       </li>
-      <% if session[:tutor_id] %>
+      <% if Person.find_by(id: session[:tutor_id]) %>
         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
