--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -67,7 +67,7 @@
       <%= f.label :subject %>
       <!--%= f.collection_select :subject, :cvsubject_id, CvSubject.all, :id %>-->
       <!--collection_select(:post, :author_id, Author.all, :id, :name_with_initial, prompt: true)-->
-      <%= f.select :name, options_for_select(['English 9','English 9 Advanced','English 10','English 10 Honors','American Literature','English Literature','ELD Level 1-2','ELD Level 3','ELD Level 4','ELD Level 5','Lit for Success','Human Geography','World History','US History','American Government','Economics','Sociology','Psychology','Integrated Math I','Integrated Math II','Integrated Math II Accelerated','Integrated Math III','Integrated Math III Accelerated','Trigonometry/Statistics','Math Analysis','Math Analysis Honors','Linear Algebra Honors','Intervention Math','Int Math II Concepts','Math Thinking','Biology','Medical Biology','Earth Space Science','Chemistry','Physics','Kinesiology','Physiology','Physiology Honors','Sports Medicine','Health','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6','German 5-6 Honors','Korean 1-2','Korean 3-4','Korean 5-6','Spanish 1-2','Spanish 3-4','Spanish 5-6','AP English Language','AP English Literature','AP European History','AP US History','AP Economics','AP Government/Politics','AP Psychology','AP Human Geography','AP Calculus AB','AP Calculus BC','AP Statistics','AP Biology','AP Chemistry','AP Physics 1','AP Physics 2','AP Physics C','AP Environmental Science','AP French Language','AP German Language','AP Spanish Language (7-8)','AP Spanish Literature (9-10)'], (@subject.name)), { include_blank: 'None'}, class: "form-control" %>
+      <%= f.select :name, options_for_select(['American Government','American Literature','Biology','Chemistry', 'Computer Science (buffet)', 'ELD Level 1-2','ELD Level 3','ELD Level 4','ELD Level 5','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English Literature','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography','Int Math II Concepts','Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'], (@subject.name)), { include_blank: 'None'}, class: "form-control" %>
       
       </select><br>
       
@@ -75,7 +75,7 @@
       <%= f.select :date, options_for_select(['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'], (@subject.date)), { include_blank: 'None'}, class: "form-control" %>
       
       <%= f.label :rate %>
-      <%= f.text_field :rate, class: 'form-control' %><br>
+      <%= f.text_field :rate, class: 'form-control', value: "$" %><br>
   
       <div>
         <p></p>
