--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -84,7 +84,7 @@
               <% Subject.all.each do |i| %>
                 <% if ((i.creatorid == session[:tutor_id]) && (i.deletedSubject==false)) %>
                  
-                  <table style="width:180%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
+                  <table style="width:150%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
                       <th style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th style="width:22%", "position:absolute"> <%= i.date %></th> 
@@ -126,10 +126,10 @@
           <p style = "color:#fff;">Requests</p>
         <table style="width:120%" id="VisualTable"> 
             <tr>
-                      <th style="width:13.1%", "position:absolute">Student name</th>
-                      <th style="width:12%", "position:absolute">Email</th> 
-                      <th style="width:12%", "position:absolute">Subject</th> 
-                      <th style="width:12%", "position:absolute">Day</th> 
+                      <th style="width:16.1%", "position:absolute">Student name</th>
+                      <th style="width:25%", "position:absolute">Email</th> 
+                      <th style="width:20%", "position:absolute">Subject</th> 
+                      <th style="width:20%", "position:absolute">Day</th> 
               </tr>
             
               <% TutorRequest.all.each do |i| %>
@@ -137,10 +137,10 @@
                  
                   <table style="width:120%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
-                      <th style="width:13.1%", "position:absolute"> <%= i.student %></th>
-                      <th style="width:12%", "position:absolute"> <%= i.email %></th> 
-                      <th style="width:12%", "position:absolute"> <%= i.whichSubject %></th> 
-                      <th style="width:12%", "position:absolute"> <%= i.time %></th> 
+                      <th style="width:16.1%", "position:absolute"> <%= i.student %></th>
+                      <th style="width:25%", "position:absolute"> <%= i.email %></th> 
+                      <th style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
+                      <th style="width:20%", "position:absolute"> <%= i.time %></th> 
                       
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
@@ -162,6 +162,8 @@
             <!--</tr>-->
           </table>
           </div>
+            <br><br>
+           <%= link_to "Delete Account", accountDelete_path(id: Tutor.find_by(people_id: @person.id).id), method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>   <!--instead of accountDelete_path just submit the current person --> 
           </h1>
       </section>
     </aside>
