--- a/app/views/shared/_error_messages_search.html.erb
+++ b/app/views/shared/_error_messages_search.html.erb
@@ -1,5 +1,5 @@
   <div id="error_explanation">
     <div class="alert alert-danger">
-      No tutor available for selected subject.
+      No tutor available right now for selected subject.
     </div>
   </div>
