--- a/app/views/people/adminPage.html.erb
+++ b/app/views/people/adminPage.html.erb
@@ -67,11 +67,13 @@
 	          </h2>
           </div>
           </h1>
-          <br>
-          <a href="/import_from_excel" id="animatedbutton">
-		        Import excel sheet (cv student list)
+          <br><br><br>
+          <a href="/import_from_excel" id="animatedbutton", style="margin-left: 7.5%; width:45%;">
+		        Import CV student list (excel sheet)
 	    	  </a>
-        
+	    	  <h1>
+          <%= link_to "Delete Account", @person, method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->  
+        </h1>
       </section>
     </aside>
    </div>
