Made home screen full page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 </head>
-<body id="body">
+<body id="body", class="large_content">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
  <!--     <a class="navbar-brand" href="/login">Login</a>-->
  <!--     </div>-->
  <!--   </nav>-->
-	<div class="large_content" style= "height: 94.8vh">
+	<div style= "height: 94.8vh">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
 			<p id="homep">Welcome to the Tutor Matching home page! Click the button below to sign up or login. </p>		
