--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -78,10 +78,10 @@
  <!--     <a class="navbar-brand" href="/login">Login</a>-->
  <!--     </div>-->
  <!--   </nav>-->
-	<div class="large_content" style= "height: 94.8vh">
+	<div class="large_content" style= "height: 100vh">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
-			<p id="homep">Welcome to the Tutor Matching home page! Click the button below to sign up or login. </p>		
+			<p id="homep">Welcome to Tutor Matching! Click a button below to sign up to tutor others or to receive tutoring. </p>		
 		</div>
 			
 		<!--<a href="/signup" id="animatedbutton">-->
@@ -90,7 +90,7 @@
 		<!--</a>-->
 		<% if !session[:tutor_id] %>
   		<a href="/tutorsignup" id="animatedbutton">
-  		  I'm a Tutor
+  		  Sign up as a tutor
   			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
   		</a>
   	<% end %>
