--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,6 +5,13 @@
 	<title>HOME PAGE</title>
 	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
+<style>
+  @media screen and (min-width: 1366px){
+  	.large_content{
+  		height: 100vh;
+  	}
+  }
+</style>
 </head>
 <body id="body">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
