--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -62,20 +62,20 @@
     <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
       <%= render 'shared/error_messages_tutor_people' %>
           
-        <%= f.label :name %>
+        <%= f.label :name %><span class="required">*</span>
         <%= f.text_field :name, placeholder: "Joe Falcon",class: 'form-control' %>
         
-        <%= f.label :email %>
+        <%= f.label :email %><span class="required">*</span>
         <%= f.email_field :email, placeholder: "example@gmail.com", class: 'form-control' %>
         
-        <%= f.label :ID_Number %>
+        <%= f.label :ID_Number %><span class="required">*</span>
         <%= f.text_field :id_num, placeholder: "123456", class: 'form-control' %>
         
         <!--% Cvstudent.all.each do |i| %>-->
         <!--  % if tutor_params[:id_num] == i.idnum %>-->
           
         
-        <%= f.label :grade %>
+        <%= f.label :grade %><span class="required">*</span>
          <%= f.text_field :grade, class: 'form-control' %>
         <!--<select class = "form-control" name="Contact[email_provider]">-->
         <!--  <option>9</option>-->
@@ -83,10 +83,10 @@
         <!--  <option>11</option>-->
         <!--  <option>12</option>-->
         <!--</select>-->
-        <%= f.label :password %>
+        <%= f.label :password %><span class="required">*</span>
         <%= f.password_field :password, class: 'form-control' %>
         <br>
-        <%= f.label :password_confirmation, "Re-enter password" %>
+        <%= f.label :password_confirmation, "Re-enter password" %><span class="required">*</span>
         <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
         
         <%= f.label "Admin Key (admin use only)" %>
