--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -480,7 +480,7 @@ center{
 		width: 100vw;
 		padding-top: 0px;
 		padding-bottom: 50px;
-		background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+		background-image: url("https://s3.envato.com/files/233994195/590x332.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align: center;
